fixed alignmet issure

--- a/website/src/components/Layout/index.scss
+++ b/website/src/components/Layout/index.scss
@@ -4,7 +4,7 @@
     background: #000028;
     text-align: left;
     padding-right: 8%;
-    margin-left: 6%;
+    margin-left: 8%;
     border: solid #000028;
     font-size: 32px;
     color: #ffffff; /* Corrected */
